# data-engineering-github-actions

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  .yamllint  README.md  noxfile.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dependency-review.yml  list-open-prs.yml  pre-commit.yaml  pre-commit.yml  python-lint.yml  python-type.yml  python-unit-test.yml  release.yml  resuable-list-open-prs.yml  resuable-update-branch.yml  resusable-python-lint.yml  reusable-dependency-review.yml  reusable-list-open-prs.yml  reusable-nox.yml  reusable-pre-commit.yml  reusable-python-lint.yml  reusable-python-type.yml  reusable-python-unit-test.yml  reusable-security.yml  reusable-yaml-lint.yml  security.yml  yaml-lint.yml
scripts/: list_open_prs.py  merge_conflict_notify.py
terraform/: .terraform.lock.hcl  terraform.tf
tests/unit/: test_list_open_prs.py  test_merge_conflict_notify.py
