[project]
name = "data-engineering-github-actions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "humanize>=4.13.0",
    "slack-sdk>=3.36.0",
    "typer>=0.17.3",
    "checkov>=3.2.524"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
# Remove warnings
ignore = ["D203", "D213", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101", "PLC0415"]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "ruff>=0.15.11",
]
test = [
    "pytest>=9.0.3",
]
